[package]
name = "ber_tlv_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ber_tlv_decoder"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
flate2 = "1.1.0"
rayon = "1.10.0"
walkdir = "2.5.0"
hex = "0.4.3"